# horticulture-dashboard-noted

backend/: .gitignore  Dockerfile  config.py  docker-compose-yml  main.py  pyproject.toml
backend/auth/: basic.py
backend/database/: mongo.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: Footer.jsx  NewsItem.jsx  Sidebar.jsx
frontend/src/data/: komoditas.json
frontend/src/pages/: Dashboard.jsx  News.jsx
horticulture-dashboard/: package-lock.json  package.json
horticulture-dashboard/src/: App.jsx
horticulture-dashboard/src/components/: Sidebar.jsx
