[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.5",
    "openai>=1.55.3",
    "pydantic-settings>=2.6.1",
    "pymongo[srv]>=4.10.1",
    "python-dotenv>=1.0.1",
    "pytz>=2024.2",
    "ruff>=0.8.1",
    "serpapi>=0.1.5",
]
